--- a/.github/workflows/build-apk-frost819-bv.yml
+++ b/.github/workflows/build-apk-frost819-bv.yml
@@ -192,7 +192,7 @@ jobs:
           # done || echo "未找到APK文件，请检查构建日志。"
           
           mv ./app/build/outputs/apk/default/release/BV_*.release_default_universal.apk ./app/build/outputs/apk/default/release/f819bv-${{ env.BUILD_DATE }}.apk
-          mv ./app/build/outputs/apk/lite/release/BV_*.release_lite_universal.apk ./app/build/outputs/apk/lite/release/f819bv-lite-${{ env.BUILD_DATE }}.apk
+          # mv ./app/build/outputs/apk/lite/release/BV_*.release_lite_universal.apk ./app/build/outputs/apk/lite/release/f819bv-lite-${{ env.BUILD_DATE }}.apk
  
       - name: Create github release & upload apk
         uses: softprops/action-gh-release@master
@@ -202,7 +202,7 @@ jobs:
           # 要附加到此次发布的文件列表
           files: |
             frost819-bv-source/app/build/outputs/apk/default/release/f819bv-${{ env.BUILD_DATE }}.apk
-            frost819-bv-source/app/build/outputs/apk/lite/release/f819bv-lite-${{ env.BUILD_DATE }}.apk
+            # frost819-bv-source/app/build/outputs/apk/lite/release/f819bv-lite-${{ env.BUILD_DATE }}.apk
           # 设置为 true 则每次运行覆盖同名草稿，适用于持续集成测试版
           draft: false
           prerelease: false
