--- a/.github/workflows/build-lib-vlc.yml
+++ b/.github/workflows/build-lib-vlc.yml
@@ -252,79 +252,79 @@ jobs:
           draft: false
           prerelease: false
 
-      # - name: Push vlc aar to bv-libs repository
-      #   env:
-      #     TARGET_REPO: "git@github.com:zxgv5/bv-libs.git"
-      #   run: |
-      #     # 设置 SSH 密钥和配置
-      #     echo "Setting up SSH configuration..."
-      #     mkdir -p ~/.ssh
-      #     chmod 700 ~/.ssh
-      #     
-      #     # 写入私钥
-      #     echo "${{ secrets.BV_LIBS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
-      #     chmod 600 ~/.ssh/id_ed25519
-      #     
-      #     # 配置 SSH 不验证主机
-      #     echo "Host github.com" >> ~/.ssh/config
-      #     echo "  StrictHostKeyChecking no" >> ~/.ssh/config
-      #     echo "  UserKnownHostsFile /dev/null" >> ~/.ssh/config
-      #     chmod 600 ~/.ssh/config
-      #     
-      #     # 测试 SSH 连接
-      #     echo "Testing SSH connection to GitHub..."
-      #     ssh -T git@github.com 2>&1 | grep -v "successfully authenticated" || true
-      #     
-      #     # 设置 Git 配置
-      #     git config --global user.name "GitHub Actions"
-      #     git config --global user.email "actions@github.com"
-      #     git config --global init.defaultBranch main
-      #     
-      #     # 克隆目标仓库
-      #     cd "$GITHUB_WORKSPACE"
-      #     echo "Cloning target repository: ${{ env.TARGET_REPO }}"
-      #     git clone ${{ env.TARGET_REPO }} target-repo
-      #     cd target-repo
-      #     
-      #     # 确保在 main 分支
-      #     git checkout main
-      #     
-      #     # 复制新的 AAR 文件到目标位置
-      #     SOURCE_AAR="$GITHUB_WORKSPACE/libvlc-release.aar"
-      #     TARGET_DIR="libVLC"
-      #     
-      #     # 检查 AAR 文件是否存在
-      #     if [ -f "$SOURCE_AAR" ]; then
-      #       echo "✓ Found AAR file: $SOURCE_AAR"
-      #       
-      #       # 确保目标目录存在
-      #       mkdir -p "$TARGET_DIR"
-      #       
-      #       # 复制新文件
-      #       echo "Copying new AAR file..."
-      #       cp -v "$SOURCE_AAR" "$TARGET_DIR/libvlc-release.aar"
-      #       
-      #       # 提交更改
-      #       echo "Committing changes..."
-      #       git add "$TARGET_DIR/libvlc-release.aar"
-      #       
-      #       # 检查是否有更改
-      #       if git diff --cached --quiet; then
-      #         echo "No changes to commit."
-      #       else
-      #         git commit -m "Update VLC AAR (multi-arch: arm64+v7a) - ${{ env.BUILD_DATE }} [CI]"
-      #         echo "Pushing to remote repository..."
-      #         git push origin main
-      #         echo "✓ Successfully pushed multi-architecture VLC AAR to ${{ env.TARGET_REPO }}"
-      #       fi
-      #     else
-      #       echo "✗ Error: AAR file not found at $SOURCE_AAR"
-      #       exit 1
-      #     fi
-      #     
-      #     # 清理 SSH 密钥
-      #     rm -f ~/.ssh/id_ed25519
-      #     rm -f ~/.ssh/config
+      - name: Push vlc aar to bv-libs repository
+        env:
+          TARGET_REPO: "git@github.com:zxgv5/bv-libs.git"
+        run: |
+          # 设置 SSH 密钥和配置
+          echo "Setting up SSH configuration..."
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          
+          # 写入私钥
+          echo "${{ secrets.BV_LIBS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          
+          # 配置 SSH 不验证主机
+          echo "Host github.com" >> ~/.ssh/config
+          echo "  StrictHostKeyChecking no" >> ~/.ssh/config
+          echo "  UserKnownHostsFile /dev/null" >> ~/.ssh/config
+          chmod 600 ~/.ssh/config
+          
+          # 测试 SSH 连接
+          echo "Testing SSH connection to GitHub..."
+          ssh -T git@github.com 2>&1 | grep -v "successfully authenticated" || true
+          
+          # 设置 Git 配置
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git config --global init.defaultBranch main
+          
+          # 克隆目标仓库
+          cd "$GITHUB_WORKSPACE"
+          echo "Cloning target repository: ${{ env.TARGET_REPO }}"
+          git clone ${{ env.TARGET_REPO }} target-repo
+          cd target-repo
+          
+          # 确保在 main 分支
+          git checkout main
+          
+          # 复制新的 AAR 文件到目标位置
+          SOURCE_AAR="$GITHUB_WORKSPACE/libvlc-release.aar"
+          TARGET_DIR="libVLC"
+          
+          # 检查 AAR 文件是否存在
+          if [ -f "$SOURCE_AAR" ]; then
+            echo "✓ Found AAR file: $SOURCE_AAR"
+            
+            # 确保目标目录存在
+            mkdir -p "$TARGET_DIR"
+            
+            # 复制新文件
+            echo "Copying new AAR file..."
+            cp -v "$SOURCE_AAR" "$TARGET_DIR/libvlc-release.aar"
+            
+            # 提交更改
+            echo "Committing changes..."
+            git add "$TARGET_DIR/libvlc-release.aar"
+            
+            # 检查是否有更改
+            if git diff --cached --quiet; then
+              echo "No changes to commit."
+            else
+              git commit -m "Update VLC AAR (multi-arch: arm64+v7a) - ${{ env.BUILD_DATE }} [CI]"
+              echo "Pushing to remote repository..."
+              git push origin main
+              echo "✓ Successfully pushed multi-architecture VLC AAR to ${{ env.TARGET_REPO }}"
+            fi
+          else
+            echo "✗ Error: AAR file not found at $SOURCE_AAR"
+            exit 1
+          fi
+          
+          # 清理 SSH 密钥
+          rm -f ~/.ssh/id_ed25519
+          rm -f ~/.ssh/config
 
       # 可选：缓存构建结果以加速后续构建
       # - name: Cache build artifacts
