--- a/.github/workflows/build-apk-fantasytyx-bv.yml
+++ b/.github/workflows/build-apk-fantasytyx-bv.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
-      - name: Run customize scripts
+      - name: Customize scripts
         run: |
           chmod +x $GITHUB_WORKSPACE/android-ci-source/scripts/customize-bv-fantasy.sh
           $GITHUB_WORKSPACE/android-ci-source/scripts/customize-bv-fantasy.sh
