--- a/.github/workflows/build-lib-akdanmaku.yml
+++ b/.github/workflows/build-lib-akdanmaku.yml
@@ -75,12 +75,12 @@ jobs:
           java-version: ${{ env.JDK_VERSION }}
           distribution: 'temurin'
 
-      - name: Setup android sdk (minimal)
-        uses: android-actions/setup-android@main
-        with:
-          api-level: ${{ env.ANDROID_COMPILE_SDK }}
-          build-tools: ${{ env.ANDROID_BUILD_TOOLS }}
-          accept-android-sdk-licenses: true
+      # - name: Setup android sdk (minimal)
+      #   uses: android-actions/setup-android@main
+      #   with:
+      #     api-level: ${{ env.ANDROID_COMPILE_SDK }}
+      #     build-tools: ${{ env.ANDROID_BUILD_TOOLS }}
+      #     accept-android-sdk-licenses: true
 
       - name: Prepare gradle environment
         working-directory: ./akdanmaku-source
